<resources>
    <string name="app_name">TimeTrackerApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome 👋</string>
    <string name="all_tasks">All Tasks 🗒</string>
    <string name="quote_description">Quote Description</string>
    <string name="quote_author">Quote Author</string>
    <string name="custom_quote_author">~ %s</string>
    <string name="default_quote_desc">Be grateful for what you have and stay happy!</string>
    <string name="default_quote_author">~ Anonymous</string>
    <string name="task_title">Task Title</string>
    <string name="task_timer">00:00:00</string>
    <string name="task_desc">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="new_task">New Task 📍</string>
    <string name="label_task_title">Task Title</string>
    <string name="label_task_desc">Task Description</string>
</resources>