<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30sp"
    android:orientation="vertical"
    tools:context=".views.NewTaskSheet">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:textAlignment="center"
        android:text="@string/new_task"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:padding="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_task_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_title"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:padding="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_task_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_desc"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addtask"
        android:imeOptions="actionDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.Material3.Button"
        android:text="@string/add_task" />

</LinearLayout>