<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp"
    android:layout_marginBottom="20sp"
    app:strokeWidth="0sp"
    app:cardElevation="5sp">

    <LinearLayout
        android:padding="15sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tasktitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/rubik"
                android:textColor="?android:textColorPrimary"
                android:text="@string/task_title"
                android:textSize="16sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/tv_tasktimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:layout_alignParentEnd="true"
                android:text="@string/task_timer"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp">
            </TextView>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_taskdesc"
            android:paddingTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/task_desc"
            android:textSize="14sp">
        </TextView>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
