<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".views.HomeFragment">

    <TextView
        android:id="@+id/tv_notasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:text="NO TASKS AVAILABLE" />


    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/green"
            app:strokeWidth="0sp"
            app:cardElevation="8sp">

            <LinearLayout
                android:padding="10sp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_quotedesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/quote_description"
                    android:textColor="@color/white">
                </TextView>

                <TextView
                    android:id="@+id/tv_quoteauthor"
                    android:paddingTop="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/quote_author"
                    android:textColor="@color/white">
                </TextView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_margin="20sp"
            android:background="#808080" />

        <TextView
            android:paddingStart="20sp"
            android:paddingBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/all_tasks"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20sp"
        app:elevation="0dp"
        android:contentDescription="@string/add_task"
        android:text="@string/add_task"
        app:icon="@drawable/baseline_add_24" />

</RelativeLayout>